<resources>
    <string name="app_name">AddictiveEnglish</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Cài Đặt</string>
    <string name="facebook_application_id" translatable="false">419093415093734</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="host_address">Host Address</string>
    <string name="action_history">Lịch Sử</string>
    <string-array name="source">
        <item>Oxford BookWorm</item>
        <item>Podcast In English</item>
        <item>BBC English</item>
        <item>Royal Audio Book</item>
    </string-array>

    <!-- Strings related to arena -->
    <string name="arena_title">Arena</string>
    <string name="total_battles">Battles: </string>
    <string name="win_rate">Win rate: </string>
    <string name="win_Battle">Win battles: </string>
    <string name="total_battles_on_chain" formatted="false">%s battles chain</string>
    <string name="win_lost_battle_chain" formatted="false">%s win - %s lost</string>
    <string name="find_battle">Find enemy</string>
    <string name="battle_history">History</string>
    <string name="battle"> battles</string>
    <string name="action_friends">Friends</string>
    <string name="mail_title">Mail box</string>
    <string name="action_mailbox">Mail box</string>
    <string name="user_name">Name: </string>
    <string name="question_a_title" formatted="false">A. %s</string>
    <string name="question_b_title" formatted="false">B. %s</string>

    <!-- Strings related to challenge -->
    <string name="place_bet">Bet money: </string>
    <string name="message">Challenge message...</string>
    <string name="change_enemy">Refresh</string>
    <string name="prepare_cancel_battle">Give Up</string>
    <string name="start_game">Start</string>
    <string name="accept_answer">Answer</string>
    <string name="place_bet_hint">value...</string>
    <string name="challenge">Challenge</string>
    <string name="button_title_add_friend">Add friend</string>
    <string name="lorem">Hihihi</string>
    <string name="answer_title">Questions</string>
    <string name="answer_1st">Question 1: </string>
    <string name="answer_number" formatted="false">Question %s: </string>
    <string name="go_home">Go home</string>
    <string name="go_arena">Arena</string>
    <string name="back_to_inbox">Mail box</string>
    <string name="back_to_ranking">Ranking</string>
    <string name="back_to_home_view">Main Home</string>
    <string name="arena_fill_out_message">The message must not be empty.</string>
    <string name="arena_fill_out_bet_value">The bet money must not be empty.</string>
    <string name="arena_fill_out_not_enough_coins">Not enough money to start battle.</string>
    <!--<string name="chains_text" formatted="false"></string>-->

    <!-- Battle result-->
    <string name="result_view_title">Battle result</string>
    <string name="result_title">Your answers</string>
    <string name="result_sumary">Sumary: </string>
    <string name="result_total_time">Times: </string>
    <string name="result_other_battle">Play again </string>

    <!--Mail box detail-->
    <string name="mail_title_battle_challenge">Challenge mail</string>
    <string name="mail_title_battle_report">The battle result</string>
    <string name="mail_title_system_reward">System gifts</string>
    <string name="mail_title_system_message">System message</string>
    <string name="mail_status_information">Information</string>
    <string name="mail_add_friend_request" formatted="false">The player with name %s want to make friend with you.\n</string>
    <string name="mail_status_gif_info">Gifts: </string>
    <string name="mail_status_battle_won">Victory</string>
    <string name="mail_status_battle_failure">Failure</string>
    <string name="mail_content_battle_challenge" formatted="false">Player %s want to challenge you with stake upto %s\nAre you dare!\nChallenge Message: %s</string>
    <string name="mail_accept_battle_button">Accept</string>
    <string name="mail_accept_friend_button">Accept</string>
    <string name="mail_cancel_friend_button">Cancel</string>
    <string name="mail_cancel_battle_button">Give in</string>
    <string name="mail_confirm_button">Ok</string>
    <string name="mail_claim_reward_button">Claim</string>
    <string name="mail_example_challenge_message">Player OatOal want to challenge you with stake upto muốn thách đấu với bạn với giá trị cược lên đến 2500 coins\nBạn có giám!</string>
    <string name="mail_remove_inform">This will permanently delete your mail. Do you want to continue?</string>
    <string name="mail_remove_friend_inform">Do you want to cancel the friend request and delete this mail?</string>
    <string name="mail_inform_cancel_battle">Do you want to cancel the battle and delete this mail?</string>
    <string name="mail_years_ago" formatted="false">%s years ago</string>
    <string name="mail_months_ago" formatted="false">%s months ago</string>
    <string name="mail_weeks_ago" formatted="false">%s weeks ago</string>
    <string name="mail_days_ago" formatted="false">%s days ago</string>
    <string name="mail_hours_ago" formatted="false">%s hours ago</string>
    <string name="mail_mins_ago" formatted="false">%s minutes ago</string>
    <string name="mail_less_than_a_min">Just now.</string>
    <string name="mail_unknown_times">Unknown times.</string>
    <string name="mail_actionbar_search">find</string>
    <string name="mail_actionbar_filter">filter</string>


    <!--Alert box-->
    <string name="alert_positive_yes">Accept</string>
    <string name="alert_negative_no">Cancel</string>
    <string name="alert_title_confirm">Confirm action</string>
    <string name="searching">Search</string>

    <!--Ranking-->
    <string name="ranking_win_rate_title" formatted="false">Win rate: %s</string>
    <string name="ranking_total_battle_title" formatted="false">Battles: %s</string>
    <string name="ranking_bronze_title" formatted="false">Bronze %s</string>
    <string name="ranking_sliver_title" formatted="false">Silver %s</string>
    <string name="ranking_gold_title" formatted="false">Gold %s</string>
    <string name="ranking_view_title">Ranking</string>
    <string name="collapse">Collapse</string>
    <string name="dialog_fire_missiles">Can\'t connect to network!</string>
    <string name="fire">Reconnect</string>
    <string name="expand">Expand</string>
    <string name="global">Global</string>
    <string name="friends">Friends</string>
    <string name="rank_label">Rank: </string>

    <!--Message-->
    <string name="alert_title">Alert</string>
    <string name="answer_error" formatted="false">Fails to answer this question, error code: %s</string>
    <string name="accept_message">Oke</string>
    <string name="mail_missing_battle_info">Can not display challenge mail, missing information</string>
    <string name="mail_delete_error" formatted="false">Fails to delete mail, error code: %s</string>
    <string name="cancel_battle_error" formatted="false">Fails to cancel battle, error code: %s</string>
    <string name="claim_success">Success to claim rewards</string>
    <string name="claimed_before">Reward claimed before</string>
    <string name="claim_error" formatted="false">Fails to claim rewards, error code: %s</string>
    <string name="action_success">Success</string>
    <string name="action_missing_info" formatted="false">Missing information, error code: %s</string>
    <string name="reward_claimed">Reward claimed</string>
    <string name="unknown_result">Unknown response</string>
    <string name="error_answer_friend_request" formatted="false">Fails to answer friend request, error code: %s</string>
    <string name="level_up_message">Level up!</string>
    <string name="level_down_message">Level down!</string>
    <string name="delete_confirm">Do you want to delete all selected mails?</string>
    <string name="delete_button_title">Delete</string>
    <string name="cancel_button_title">Cancel</string>
    <string name="delete_selected_mail_error" formatted="false">Fails to delete selected mails, error code: %s</string>
    <string name="sent_friend_request_success">Sent add friend request successfully</string>
    <string name="already_friend">Already friend</string>
    <string name="friend_not_found" formatted="false">Missing information, error code: %s</string>
    <string name="unknown_response_code" formatted="false">Unknown response, error code: %s</string>
    <string name="fails_to_sent_friend_request" formatted="false">Fails to sent friend request, error code: %s</string>
    <string name="fails_to_get_ranking_information" formatted="false">Fails to get ranking information, error code: %s</string>

    <!--Battle history-->
    <string name="total_true_answer" formatted="false">Answers: %s</string>
    <string name="total_answer_time" formatted="false">Times: %s</string>

    <!--Mail adapter-->
    <string name="mail_challenge">Challenge message.</string>
    <string name="mail_battle_result">Battle result.</string>
    <string name="mail_system_reward">System rewards.</string>
    <string name="mail_system_info">System message.</string>
    <string name="app_intro">AppIntro</string>
    >>>>>>> origin/master


    <!--NEW(0),-->
    <!--RATING(1),-->
    <!--NOTUNBOXED(2),-->
    <!--CHALLENGE_MAIL(3),-->
    <!--SYSTEM_INFO(4),-->
    <!--GIFS(5),-->
    <!--OTHER(6);-->
    <string-array name="mail_filter_array">
        <item>Newest</item>
        <item>Important</item>
        <item>Unread</item>
        <item>Challenge</item>
        <item>System</item>
        <item>Present</item>
        <item>Others</item>
    </string-array>


</resources>
