<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:layout_marginTop="@dimen/layout_5"
    android:background="@color/color_ghost_white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textSize="@dimen/text_10pt"
        android:textStyle="bold"
        android:textColor="@color/fbutton_color_pomegranate"
        android:elevation="@dimen/layout_2"
        android:gravity="center"
        android:text="@string/result_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_300"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_border"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/result_question_title"
            style="@style/NormalTextBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_1st"
            android:textColor="@color/authui_colorPrimaryDark" />

        <at.markushi.ui.CircleButton
            android:id="@+id/result_button_listen"
            android:layout_width="@dimen/layout_72"
            android:layout_height="@dimen/layout_72"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/layout_5"
            android:layout_marginTop="@dimen/layout_5"
            android:src="@drawable/icon_listen_128"
            custom:cb_color="@color/color_orange"
            custom:cb_pressedRingWidth="8dip"/>

        <at.markushi.ui.CircleButton
            android:id="@+id/result_button_write"
            android:layout_width="@dimen/layout_72"
            android:layout_height="@dimen/layout_72"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/layout_5"
            android:layout_marginTop="@dimen/layout_5"
            android:src="@drawable/icon_write_128"
            android:visibility="gone"
            custom:cb_color="@color/color_orange"
            custom:cb_pressedRingWidth="8dip" />

        <at.markushi.ui.CircleButton
            android:id="@+id/result_button_reading"
            android:layout_width="@dimen/layout_72"
            android:layout_height="@dimen/layout_72"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/layout_5"
            android:layout_marginTop="@dimen/layout_5"
            android:src="@drawable/icon_reading_128"
            android:visibility="gone"
            custom:cb_color="@color/color_orange"
            custom:cb_pressedRingWidth="8dip" />

        <TextView
            android:id="@+id/result_question_content"
            style="@style/NormalTextBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_12"
            android:text="What are they talking about?" />

        <TextView
            android:id="@+id/result_answer_a"
            style="@style/NormalTextBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="A: A music"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/result_answer_b"
            style="@style/NormalTextBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="B: A music"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_28"
        android:layout_marginBottom="@dimen/layout_8"
        android:layout_marginTop="@dimen/layout_2"
        android:paddingEnd="@dimen/layout_8"
        android:paddingStart="@dimen/layout_8"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/result_sumary"
            android:textSize="@dimen/text_7pt"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="@dimen/layout_64"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/result_total_time"
                android:textSize="@dimen/text_6pt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/result_total_time"
                style="@style/SmallTextBlackBold"
                android:layout_width="@dimen/layout_64"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="04:25" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_72"
        android:paddingEnd="@dimen/layout_12"
        android:paddingStart="@dimen/layout_12"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/result_answer_1"
            android:layout_width="@dimen/layout_55"
            android:layout_height="@dimen/layout_55"
            android:layout_marginRight="@dimen/layout_2"
            android:background="@drawable/result_wrong_answer"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="@dimen/text_7pt"
            android:textStyle="bold" />

        <Button
            android:layout_marginRight="@dimen/layout_2"
            android:layout_marginLeft="@dimen/layout_2"
            android:id="@+id/result_answer_2"
            android:layout_width="@dimen/layout_55"
            android:layout_height="@dimen/layout_55"
            android:background="@drawable/result_true_answer"
            android:text="2"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/text_7pt"/>

        <Button
            android:layout_marginRight="@dimen/layout_2"
            android:layout_marginLeft="@dimen/layout_2"
            android:id="@+id/result_answer_3"
            android:layout_width="@dimen/layout_55"
            android:layout_height="@dimen/layout_55"
            android:background="@drawable/result_true_answer"
            android:text="3"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/text_7pt"/>

        <Button
            android:layout_marginRight="@dimen/layout_2"
            android:layout_marginLeft="@dimen/layout_2"
            android:id="@+id/result_answer_4"
            android:layout_width="@dimen/layout_55"
            android:layout_height="@dimen/layout_55"
            android:text="4"
            android:textColor="@color/white"
            android:textSize="@dimen/text_7pt"
            android:textStyle="bold"
            android:background="@drawable/result_true_answer" />

        <Button
            android:layout_marginLeft="@dimen/layout_2"
            android:id="@+id/result_answer_5"
            android:layout_width="@dimen/layout_55"
            android:layout_height="@dimen/layout_55"
            android:background="@drawable/result_true_answer"
            android:text="5"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/text_7pt"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/result_back_to_prepare"
            android:layout_width="@dimen/layout_110"
            android:layout_height="@dimen/layout_55"
            android:layout_marginEnd="@dimen/layout_12"
            android:layout_marginStart="@dimen/layout_12"
            android:text="@string/find_battle"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_12dp"
            android:textStyle="bold"
            android:theme="@style/ButtonThemeFacebookBlue" />

        <Button
            android:id="@+id/result_back_to_arena"
            android:layout_width="@dimen/layout_110"
            android:layout_height="@dimen/layout_55"
            android:layout_marginEnd="@dimen/layout_12"
            android:layout_marginStart="@dimen/layout_12"
            android:text="@string/go_arena"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_12dp"
            android:textStyle="bold"
            android:theme="@style/ButtonThemeFacebookBlue"
            android:visibility="gone"/>

        <Button
            android:id="@+id/result_back_to_inbox"
            android:layout_width="@dimen/layout_110"
            android:layout_height="@dimen/layout_55"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/layout_12"
            android:layout_marginStart="@dimen/layout_12"
            android:text="@string/back_to_inbox"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_12dp"
            android:textStyle="bold"
            android:theme="@style/ButtonThemeFacebookBlue"
            android:visibility="gone" />

        <Button
            android:id="@+id/result_back_to_ranking"
            android:layout_width="@dimen/layout_110"
            android:layout_height="@dimen/layout_55"
            android:layout_marginEnd="@dimen/layout_12"
            android:layout_marginStart="@dimen/layout_12"
            android:text="@string/back_to_ranking"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_12dp"
            android:textStyle="bold"
            android:theme="@style/ButtonThemeFacebookBlue"
            android:visibility="gone" />

        <Button
            android:id="@+id/result_back_to_home_view"
            android:layout_width="@dimen/layout_110"
            android:layout_height="@dimen/layout_55"
            android:layout_marginEnd="@dimen/layout_12"
            android:layout_marginStart="@dimen/layout_12"
            android:text="@string/back_to_home_view"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_12dp"
            android:textStyle="bold"
            android:theme="@style/ButtonThemeFacebookBlue"/>
    </LinearLayout>

</LinearLayout>