<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/layout_5"
    android:layout_marginRight="@dimen/layout_5"
    android:orientation="vertical">
    <LinearLayout
        android:elevation="8dp"
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_48"
        android:background="@color/transparent"
        android:gravity="center_vertical">
        <ImageView
            android:layout_marginLeft="@dimen/layout_8"
            android:id="@+id/btnBack"
            android:src="@drawable/ic_back"
            android:layout_width="@dimen/layout_32"
            android:layout_height="@dimen/layout_32" />
        <TextView
            android:id="@+id/lessonTitle"
            android:textColor="@color/colorAccent"
            android:text="ARENA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_200"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/layout_16"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_avatar"
                android:layout_width="@dimen/layout_96"
                android:layout_height="@dimen/layout_96"
                android:layout_marginTop="@dimen/layout_32"
                android:src="@drawable/avatar" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="@dimen/layout_72"
                android:layout_height="@dimen/layout_32"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/layout_8"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="OatOal"
                android:textAlignment="center"
                android:textColor="@color/color_belize_hole"
                android:textSize="@dimen/text_15dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/layout_180"
            android:layout_height="@dimen/layout_32"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/layout_10"
            android:layout_marginTop="@dimen/layout_5"
            android:gravity="right">

            <TextView
                android:id="@+id/coin_number"
                android:layout_width="@dimen/layout_96"
                android:layout_height="@dimen/layout_32"
                android:elevation="2dp"
                android:gravity="center_vertical|right"
                android:paddingRight="@dimen/layout_8"
                android:text="1.25M"
                android:textColor="@color/colorExtra"
                android:textSize="@dimen/text_17dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="@dimen/layout_32"
                android:layout_height="@dimen/layout_32"
                android:layout_marginRight="@dimen/layout_8"
                android:src="@drawable/icon_coin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/layout_200"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/layout_55"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/layout_96"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/layout_8">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_battles"
                    android:textSize="@dimen/text_15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_battle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_5"
                    android:text="1,256" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_12"
                    android:text="@string/win_Battle"
                    android:textSize="@dimen/text_15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/win_battle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_5"
                    android:text="350" />

            </LinearLayout>

            <com.github.lzyzsd.circleprogress.DonutProgress
                android:id="@+id/win_rate_progress"
                android:layout_width="@dimen/layout_96"
                android:layout_height="@dimen/layout_96"
                custom:donut_progress="30"
                custom:donut_unfinished_color="@color/orange" />

        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/user_medal"
        android:layout_width="@dimen/layout_128"
        android:layout_height="@dimen/layout_128"
        android:layout_gravity="center"
        android:src="@drawable/bronze1" />

    <TextView
        android:id="@+id/user_rank"
        android:layout_width="@dimen/layout_128"
        android:layout_height="@dimen/layout_32"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="BẠC A"
        android:textColor="@color/color_green_sea"
        android:textSize="@dimen/text_20dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_2"
        android:layout_marginLeft="@dimen/layout_64"
        android:layout_marginRight="@dimen/layout_64"
        android:layout_marginTop="@dimen/layout_8"
        android:layout_marginBottom="@dimen/layout_12"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/battle_chain_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/layout_8"
        android:layout_marginBottom="@dimen/layout_5"
        android:text="@string/total_battles_on_chain"
        android:textColor="@color/BlackText"
        android:textSize="@dimen/text_15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/battle_chain_state_text"
        android:layout_width="@dimen/layout_180"
        android:layout_height="wrap_content"
        android:text="@string/win_lost_battle_chain"
        android:textSize="@dimen/text_14dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/color_alizarin"
        android:textStyle="bold"/>

    <!--<khoavin.sillylearningenglish.Function.Arena.CustomViews.BattleChainView-->
        <!--android:id="@+id/battle_chain"-->
        <!--android:layout_width="@dimen/layout_180"-->
        <!--android:layout_height="@dimen/layout_32"-->
        <!--android:layout_gravity="center"-->
        <!--custom:battleState="01123"-->
        <!--custom:contentPadding="@dimen/layout_12"-->
        <!--custom:failureColor="@color/Red"-->
        <!--custom:itemWidth="@dimen/layout_12"-->
        <!--custom:lockColor="@color/Grey"-->
        <!--custom:winColor="@color/Green" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/layout_32"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_marginRight="@dimen/layout_20"
            android:id="@+id/find_battle_button"
            android:layout_width="@dimen/layout_128"
            android:layout_height="@dimen/layout_55"
            android:shadowColor="@color/Green"
            android:text="@string/find_battle"
            android:textColor="@color/white"
            android:theme="@style/ButtonThemeGreen"
            android:textStyle="bold"/>

        <Button
            android:layout_marginLeft="@dimen/layout_20"
            android:id="@+id/battle_history_button"
            android:layout_width="@dimen/layout_128"
            android:layout_height="@dimen/layout_55"
            android:shadowColor="@color/Green"
            android:text="@string/battle_history"
            android:textColor="@color/white"
            android:theme="@style/ButtonThemeFacebookBlue"
            android:textStyle="bold"/>


    </LinearLayout>

</LinearLayout>